--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
     "vite": "^7.3.1"
-  }
+  },
+  "homepage": "https://RubanChristy.github.io/branch_io_download"
 }
