--- a/landing-page/package.json
+++ b/landing-page/package.json
@@ -8,10 +8,12 @@
   },
   "scripts": {
     "start": "vite",
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
     "vite": "^7.3.1"
-  }
+  },
+  "homepage": "https://RubanChristy.github.io/branch_io_download"
 }
